# ESP32-Web-Terminal

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: http.rs  main.rs  serial_bridge.rs  spiffs.rs  wifi.rs
src/api/: file_api.rs  mod.rs  terminal_api.rs
website/: index.html  script.js  style.css
